Project controller, model and view done.

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -5,3 +5,4 @@
 <p>Description: <%= @project.description %></p>
 <p>Completed: <%= @project.completed ? "yes" : "no" %></p>
 
+<p><%= link_to "Edit", edit_project_path(@project) %></p>
