seed file: created User, Case, Patient

--- a/app/views/cases/new.html.erb
+++ b/app/views/cases/new.html.erb
@@ -1,8 +1,6 @@
 <h1>Create a case</h1>
 
-<!-- form to create a patient -->
-<!-- form to create a patient -->
-
+<!-- add option: 1. pick an existing patient 2. create a new patient -->
 
 <!-- form to create a case -->
 <div>
