Work in progress. Column role added, admin and collaborator defined in the role, Create and edit a project only can be to do by an admin. Foreign-key in collaboration model deleted, because it is created by default.

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -5,4 +5,6 @@
 <p>Description: <%= @project.description %></p>
 <p>Completed: <%= @project.completed ? "yes" : "no" %></p>
 
-<p><%= link_to "Edit", edit_project_path(@project) %></p>
+<% if @project.is_admin?(current_user.id) %>
+  <p><%= link_to "Edit", edit_project_path(@project) %></p>
+<% end %>
