navbar logo text-color set

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -10,8 +10,10 @@
   font-family: akkurat, montserrat;
 }
 
+// homepage(searchbar)
 .search-bar-lg {
   border-radius: 30px;
   padding: 28px 24px;
   opacity: 85%;
 }
+//
