--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -8,13 +8,22 @@
 }
 
 .navbar-lewagon .navbar-brand img {
-  width: 120px;
+  width: 140px;
+}
+
+// allpages(navbar)
+a.navbar-brand {
+  padding: 0;
 }
 
 .nav-item {
-  color: white;
+  margin-right: 15px;
 }
 
 #navbarDropdown {
-  box-shadow: 0px 0px 6px rgba(56,225,237,0.8);
+  box-shadow: 0px 0px 2px $m-blue;
+  &:hover {
+    box-shadow: 0px 0px 6px rgba(56,225,237,0.7);
+  }
 }
+//
