--- a/app/views/cases/index.html.erb
+++ b/app/views/cases/index.html.erb
@@ -7,18 +7,26 @@
 
   <div>
     <ul>
-      <% @cases.each do |one_case| %>
-        <li>
-          <%= link_to(case_path(one_case)) do %>
-            Case <%= one_case.id %>:
-          <% end %>
-          <%= one_case.description %>
-          <!-- add link to doctor profile page-->
-          <br>Dr: <%= one_case.user.first_name %> <%= one_case.user.last_name %>
-          <!-- add link to patient profile page-->
-          Patient: <%= one_case.patient.id %>
-          <%= link_to "Edit", edit_case_path(one_case) %>
-          <%= link_to "Delete", case_path(one_case), method: :delete, data: { confirm: "Are you sure?"} %>
+      <% @cases.each do |c| %>
+        <li class="card">
+          <div>
+            Dr: <%= c.user.full_name %>
+            <%= c.user.email %>
+          </div>
+          <div>
+              <!-- should show case title-->
+            Case <%= c.id %>:
+            <%= c.description %>
+          </div>
+          <div>
+            <!-- add link to patient profile page-->
+            <%= c.patient.gender %>
+            <%= c.patient.age %> years old
+            Patient: <%= c.patient.id %>
+            <div>
+              <%= link_to "Read more ￫",case_path(c) %>
+            </div>
+          </div>
         </li>
       <% end %>
     </ul>
