--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -5,3 +5,11 @@
 @import "banner";
 @import "footer";
 @import "button";
+
+body {
+  position:relative;
+}
+
+.container {
+  padding-bottom: 300px;
+}
