--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -28,7 +28,7 @@
     </div>
   </div>
 
-  <div class="text-grey text-center mt-5">
+  <div class="footer-bottom text-center mt-5">
     <p>Copyright © 2020. Logolpsum. All rights reserved.</p>
   </div>
 
