--- a/app/views/cases/index.html.erb
+++ b/app/views/cases/index.html.erb
@@ -6,23 +6,29 @@
   </div>
 
   <div>
-    <ul>
+    <ul id="cards-container">
       <% @cases.each do |c| %>
         <li class="card">
-          <div>
-            Dr: <%= c.user.full_name %>
-            <%= c.user.email %>
+          <div class="card-doctor-email">
+            <span><%= c.user.full_name.upcase %></span>
+            <p><%= c.user.email %></p>
           </div>
-          <div>
+          <div class="card-main-infos">
               <!-- should show case title-->
-            Case <%= c.id %>:
-            <%= c.description %>
+            <h2>Case <%= c.id %> :</h2>
+            <p><%= c.description %></p>
           </div>
-          <div>
-            <!-- add link to patient profile page-->
-            <%= c.patient.gender %>
-            <%= c.patient.age %> years old
-            Patient: <%= c.patient.id %>
+          <div class="card-bottom-infos">
+            <div class="card-gender-age">
+              <!-- add link to patient profile page-->
+              <% if  c.patient.gender == "female"%>
+                  <p class="rounded-gender">F</p>
+              <% else %>
+                  <p class="rounded-gender">M</p>
+              <% end %>
+              <span class="card-age"><%= c.patient.age %> <span class="card-year">year</span></span>
+             <!--  <span>Patient: <%= c.patient.id %></span> -->
+            </div>
             <div>
               <%= link_to "Read more ￫",case_path(c) %>
             </div>
