--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,15 +1,20 @@
 .banner {
-  height: 400px;
+  height: 100vh;
   background-size: cover;
   background-position: center;
-  padding: 150px 15px;
+  padding: 250px 15px;
 }
 
+// homepage(title)
 .banner-title {
   color: white;
   font-family: akkurat, montserrat;
+  h1 {
+    font-size: 70px;
+    margin-bottom: 60px;
+  }
 }
-
+//
 // homepage(searchbar)
 .search-bar-lg {
   border-radius: 30px;
