--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,15 +1,16 @@
 // homepage(searchbar)
-.btn-primary {
+.btn-r-blue {
   border-radius: 36px;
+  border: 1px solid $m-blue;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.2);
   background: $m-blue;
   opacity: 1;
-  padding: 20px 28px;
-  border: none;
-  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+  padding: 16px 50px;
+  color: white;
   &:hover {
-    background: $m-blue;
-    opacity: 80%;
-    border: 1px solid $m-bluelight;
+    box-shadow: 0px 0px 10px rgba(56,225,237,0.7);
+    color: white;
+    text-shadow: 0 2px 4px rgba(0,0,0,0.2);
   }
 }
 //
