--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -7,6 +7,20 @@
     <span class="navbar-toggler-icon"></span>
   </button>
 
+  <div id="search-navbar" >
+    <% unless current_page?(root_path) %>
+      <%= form_tag projects_path, method: :get, class: "d-flex justify-content-center" do %>
+          <%= text_field_tag :query,
+            params[:query],
+            class: "form-control search-bar-nav",
+            placeholder: ""
+          %>
+          <%= button_tag :submit, class: "btn btn-search" do %>
+            <i class="fas fa-search"></i>
+          <% end %>
+      <% end %>
+    <% end %>
+  </div>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
