set case edit only for owner, list associated project for case show page

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -6,8 +6,10 @@
 @import "footer";
 @import "button";
 
-body {
-  position:relative;
+html, body {
+  padding: 0;
+  margin: 0;
+  height: 100%;
 }
 
 .container {
