--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,3 +1,8 @@
+.navbar .navbar-lewagon {
+  position: fixed;
+  top: 0px;
+}
+
 .navbar-lewagon {
   justify-content: space-between;
   background: $m-blue;
