--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -2,7 +2,10 @@
   <h1>Projects</h1>
   <ul>
     <% @projects.each do |project| %>
-      <li><%= link_to project.name, project_path(project) %></li>
+      <li>
+        <%= link_to project.name, project_path(project) %>
+        <br><%= project.description %>
+      </li>
     <% end %>
   </ul>
 </div>
