--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,8 +1,18 @@
-<div class="container my-5">
+<div class ="container">
   <h1>Projects</h1>
-  <ul>
+  <ul id ="project-container">
     <% @projects.each do |project| %>
-      <li><%= link_to project.name, project_path(project) %></li>
+      <div class="card-project">
+        <div class="card-main-infos">
+          <div class="card-project-top-infos">
+            <p><strong><%= project.links.count %></strong> cases</p>
+            <p><strong><%= project.collaborations.count %></strong> collaborators</p>
+          </div>
+          <h2><%= link_to project.name, project_path(project) %></h2>
+          <p><%= project.description %></p>
+          <span>PROJECT</span>
+        </div>
+      </div>
     <% end %>
   </ul>
 </div>
