set default hide patient form

--- a/app/views/cases/new.html.erb
+++ b/app/views/cases/new.html.erb
@@ -7,7 +7,7 @@
     <form>
       <fieldset id="linkPatient">
         <input type="radio" value="1" name="linkPatient" id="chooseExist">
-        <label class="" for="chooseExist">Choose exist patient</label>
+        <label class="" for="chooseExist">Choose existing patient</label>
         <input type="radio" value="0" name="linkPatient" id="createNew">
         <label class="" for="createNew">Create new patient</label>
       </fieldset>
