--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -52,7 +52,7 @@
   </div>
 
   <div>
-    <%= link_to 'Become a collaborator', project_collaborations_path(@project) %>
+    <%= link_to 'Become a collaborator', collaboration_path(@project) %>
   </div>
 
 </div>
