--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -51,13 +51,12 @@
     </div>
   </div>
 
-  <div>
+  <div class="w-50">
      <h4>Collaborators</h4>
        <ul>
-         <% @project.my_collaborators.each do |collaborator| %>
+         <% @project.my_collaborations.each do |collaboration| %>
            <li>
-
-             <%= link_to collaboration.project.user.name, project_path(collaboration.user) %>
+             <%= link_to collaboration.user.full_name, user_path(collaboration.user) %>
            </li>
          <% end %>
        </ul>
