--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,7 +13,7 @@
     <h4>My projects</h4>
     <%= link_to "+ project", new_project_path %>
     <ul>
-      <% @user.projects.each do |project| %>
+      <% @user.admin_projects.each do |project| %>
         <li><%= link_to project.name, project_path(project) %></li>
       <% end %>
     </ul>
