adjust style in progress

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -2,7 +2,10 @@
   height: 100vh;
   background-size: cover;
   background-position: center;
-  padding: 250px 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 // homepage(title)
