--- a/app/views/cases/index.html.erb
+++ b/app/views/cases/index.html.erb
@@ -6,7 +6,7 @@
   </div>
 
   <div>
-    <ul id="cards-container">
+    <ul class="cards-container">
       <% @cases.each do |c| %>
         <li class="card-case">
           <div class="card-doctor-email">
