--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -11,11 +11,10 @@
 html, body {
   padding: 0;
   margin: 0;
-  height: 100%;
   position:relative;
 }
 
 .container {
-  padding-bottom: 300px;
+  // padding-bottom: 300px;
 }
 
