--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,19 +1,22 @@
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2)),
                            url('https://images.pexels.com/photos/1170979/pexels-photo-1170979.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260')">
-  <div class="banner-title ml-0 text-center">
-    <h1>Dedication is our specialty</h1>
+  <div>
+    <div class="banner-title ml-0 text-center">
+      <h1>Dedication is our specialty</h1>
+    </div>
+
+    <div class="">
+      <%= form_tag projects_path, method: :get, class: "d-flex justify-content-center" do %>
+          <%= text_field_tag :query,
+            params[:query],
+            class: "form-control search-bar-lg w-100 mr-3",
+            placeholder: "Search a project"
+          %>
+          <%= button_tag :submit, class: "btn btn-r-blue" do %>
+            <i class="fas fa-search"></i>
+          <% end %>
+      <% end %>
+    </div>
   </div>
 
-  <div class="">
-    <%= form_tag projects_path, method: :get, class: "d-flex justify-content-center" do %>
-        <%= text_field_tag :query,
-          params[:query],
-          class: "form-control search-bar-lg w-50 mr-3",
-          placeholder: "Search a project"
-        %>
-        <%= button_tag :submit, class: "btn btn-r-blue" do %>
-          <i class="fas fa-search"></i>
-        <% end %>
-    <% end %>
-  </div>
 </div>
