style adjusted in progress

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -11,9 +11,9 @@
 // homepage(title)
 .banner-title {
   color: white;
-  font-family: akkurat, montserrat;
+  font-family: 'Montserrat', sans-serif;
   h1 {
-    font-size: 70px;
+    font-size: 60px;
     margin-bottom: 60px;
   }
 }
@@ -21,7 +21,7 @@
 // homepage(searchbar)
 .search-bar-lg {
   border-radius: 30px;
-  padding: 28px 24px;
+  padding: 24px 24px;
   opacity: 85%;
 }
 //
