--- a/app/assets/stylesheets/components/_card-project.scss
+++ b/app/assets/stylesheets/components/_card-project.scss
@@ -6,7 +6,7 @@ ul{
 
 #project-container{
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
   grid-gap: 16px;
 }
 
