--- a/app/assets/stylesheets/components/_card-case.scss
+++ b/app/assets/stylesheets/components/_card-case.scss
@@ -6,13 +6,13 @@ ul{
 
 .cards-container{
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 16px;
 }
 
 .card-case{
-  height: 300px;
-  width: 500px;
+  height: 200px;
+  width: 385px;
   border-radius: 16px;
   position: relative;
   border-left: 25px solid #3734AA;
