--- a/app/views/cases/index.html.erb
+++ b/app/views/cases/index.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
 
-  <div>
+  <div class="d-flex justify-content-between my-3">
     <h1>List all cases</h1>
-    <%= link_to "Add a case", new_case_path %>
+    <%= link_to "+ case", new_case_path, class: "btn-s-blue my-2" %>
   </div>
 
   <div>
