--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,5 +1,7 @@
 <div class ="container">
-  <h1>Projects</h1>
+  <div class="d-flex justify-content-between my-3">
+    <h1>Projects</h1>
+  </div>
   <ul id ="project-container">
     <% @projects.each do |project| %>
       <li >
