style for case index show and new page updated

--- a/app/views/cases/new.html.erb
+++ b/app/views/cases/new.html.erb
@@ -1,45 +1,45 @@
 <div class="container">
+  <div class="my-5">
+    <h1>Create a case</h1>
 
-  <h1>Create a case</h1>
-
-  <div>
-    <!-- form to create a case(+ option to add a patient) -->
-    <form>
-      <fieldset id="linkPatient">
-        <input type="radio" value="1" name="linkPatient" id="chooseExist">
-        <label class="" for="chooseExist">Choose existing patient</label>
-        <input type="radio" value="0" name="linkPatient" id="createNew">
-        <label class="" for="createNew">Create new patient</label>
-      </fieldset>
-    </form>
-      <%= simple_form_for(@case) do |f| %>
-        <%= f.input :description, as: :text %>
-        <!-- 1. pick an existing patient -->
-        <div id="create-patient">
-          <%= f.association :patient, label: "Choose from my patient list",
-                            collection: current_user.patients.ids,
-                            id: "link-exit-patient" %>
-        </div>
-        <div id="link-new-patient">
-          <!-- 2. create a new patient (JS: when click add a new patient, following form appear???) -->
-          <h4>Add a new patient</h4>
-          <div class="w-50">
-            <!-- nested simple_fields_for: nested attributes -->
-            <%= f.simple_fields_for(:patient) do |fp| %>
-              <%= fp.input :first_name %>
-              <%= fp.input :last_name %>
-              <%= fp.input :gender, collection: ['female', 'male'] %>
-              <%= fp.input :date_of_birth, as: :date,
-                                           start_year: 2021, end_year: 1910 %>
-              <%= fp.input :address %>
-              <%= fp.input :photos, as: :file, input_html: { multiple: true } %>
-              <%= fp.input :documents, as: :file, input_html: { multiple: true } %>
-
-            <% end %>
+    <div>
+      <!-- form to create a case(+ option to add a patient) -->
+      <form>
+        <fieldset id="linkPatient">
+          <input type="radio" value="1" name="linkPatient" id="chooseExist">
+          <label class="" for="chooseExist">Choose existing patient</label>
+          <input type="radio" value="0" name="linkPatient" id="createNew">
+          <label class="" for="createNew">Create new patient</label>
+        </fieldset>
+      </form>
+        <%= simple_form_for(@case) do |f| %>
+          <%= f.input :description, as: :text %>
+          <!-- 1. pick an existing patient -->
+          <div id="create-patient">
+            <%= f.association :patient, label: "Choose from my patient list",
+                              collection: current_user.patients.ids,
+                              id: "link-exit-patient" %>
           </div>
-        </div>
-        <%= f.button :submit, class: "btn btn-primary" %>
-      <% end %>
-  </div>
+          <div id="link-new-patient">
+            <!-- 2. create a new patient (JS: when click add a new patient, following form appear???) -->
+            <h4>Add a new patient</h4>
+            <div class="w-50">
+              <!-- nested simple_fields_for: nested attributes -->
+              <%= f.simple_fields_for(:patient) do |fp| %>
+                <%= fp.input :first_name %>
+                <%= fp.input :last_name %>
+                <%= fp.input :gender, collection: ['female', 'male'] %>
+                <%= fp.input :date_of_birth, as: :date,
+                                             start_year: 2021, end_year: 1910 %>
+                <%= fp.input :address %>
+                <%= fp.input :photos, as: :file, input_html: { multiple: true } %>
+                <%= fp.input :documents, as: :file, input_html: { multiple: true } %>
 
+              <% end %>
+            </div>
+          </div>
+          <%= f.button :submit, class: "btn-s-blue" %>
+        <% end %>
+    </div>
+  </div>
 </div>
