--- a/app/views/cases/show.html.erb
+++ b/app/views/cases/show.html.erb
@@ -1,10 +1,10 @@
-<div class="container">
+<div class="container py-5">
 
   <div>
-    <h2>Case: <%= @case.id %></h2>
+    <h2 class="mb-3">Case: <%= @case.title %></h2>
     <% if current_user == @case.user %>
-      <%= link_to "Edit", edit_case_path(@case) %>
-      <%= link_to "Delete", case_path(@case), method: :delete, data: { confirm: "Are you sure?"} %>
+      <%= link_to "Edit", edit_case_path(@case), class: "btn-s-blue" %>
+      <%= link_to "Delete", case_path(@case), method: :delete, data: { confirm: "Are you sure?"}, class: "btn-s-blue" %>
     <% end %>
     <h4>Description:</h4>
     <p><%= @case.description %></p>
@@ -23,7 +23,7 @@
 
   </div>
 
-  <div>
+  <div class="mt-3">
     <h4>Associated projects</h4>
     <ul>
       <% @links.each do |link| %>
@@ -38,13 +38,13 @@
     </ul>
   </div>
 
-  <div>
+  <div class="mt-3">
     <h4>Doctor info:</h4>
     <p>Dr <%= @case.user.first_name %><%= @case.user.last_name %></p>
     <p><%= @case.user.specialization %></p>
     <p><%= @case.user.email %></p>
   </div>
 
-  <%= link_to "Back to list of cases", cases_path %>
+  <%= link_to "Back to list of cases", cases_path, class: "btn-s-blue mt-2" %>
 
 </div>
